# Damsa

./: .gitignore  CMakeLists.txt  MagneticField.cpp  MagneticField.h  action.h  analysis.cpp  analysis.h  construction.cpp  construction.h  damsa.cpp  damsa_energy_scan.cpp  detector.h  event.h  generator.h  locationData.h  particleData.h  physics.h  plotting.h  run.h  run.mac  stepping.h  vis.mac
